@@ -1,7 +1,11 @@
 package br.com.lett.crawlernode.crawlers.corecontent.brasil;
 
+import br.com.lett.crawlernode.core.fetcher.DynamicDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.FetchMode;
 import br.com.lett.crawlernode.core.fetcher.ProxyCollection;
+import br.com.lett.crawlernode.core.fetcher.methods.ApacheDataFetcher;
+import br.com.lett.crawlernode.core.fetcher.methods.FetcherDataFetcher;
+import br.com.lett.crawlernode.core.fetcher.methods.JsoupDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.fetcher.models.Response;
 import br.com.lett.crawlernode.core.models.*;
@@ -17,6 +21,8 @@ import models.Offers;
 import models.RatingsReviews;
 import models.pricing.*;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.http.HttpHeaders;
+import org.json.JSONArray;
 import org.json.JSONObject;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -31,73 +37,43 @@ public class BrasilMartinsCrawler extends Crawler {
    protected Set<String> cards = Sets.newHashSet(Card.ELO.toString(), Card.VISA.toString(), Card.MASTERCARD.toString());
 
 
+
    public BrasilMartinsCrawler(Session session) {
       super(session);
       super.config.setFetcher(FetchMode.JSOUP);
       super.config.setParser(Parser.HTML);
    }
 
-   private final String password = getPassword();
-   private final String login = getLogin();
+   protected String accessToken;
+
+   protected String cnpj = getCnpj();
 
    protected String getPassword() {
       return session.getOptions().optString("pass");
    }
-
    protected String getLogin() {
       return session.getOptions().optString("login");
    }
 
-   @Override
-   public boolean shouldVisit() {
-      String href = session.getOriginalURL().toLowerCase();
-      String homePage = "https://www.martinsatacado.com.br";
-      return !FILTERS.matcher(href).matches() && (href.startsWith(homePage));
+   protected String getCnpj() {
+      return session.getOptions().optString("cnpj");
    }
-
    @Override
    protected Response fetchResponse() {
       Map<String, String> headers = new HashMap<>();
-      headers.put("content-type", "application/x-www-form-urlencoded");
-      headers.put("referer", session.getOriginalURL());
+      headers.put(HttpHeaders.CONTENT_TYPE, "application/json");
       headers.put("authority", "www.martinsatacado.com.br");
-      headers.put("accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9");
 
-      String payload = "j_username=" + login.replace("@", "%40") + "&j_password=" + password;
-
-      Request request = Request.RequestBuilder.create()
-         .setUrl("https://www.martinsatacado.com.br/j_spring_security_check")
-         .setPayload(payload)
-         .setProxyservice(Arrays.asList(
-            ProxyCollection.BUY_HAPROXY,
-            ProxyCollection.LUMINATI_SERVER_BR,
-            ProxyCollection.NETNUT_RESIDENTIAL_CO_HAPROXY,
-            ProxyCollection.NETNUT_RESIDENTIAL_ANY_HAPROXY))
-
+      Request request =  Request.RequestBuilder.create()
          .setHeaders(headers)
+         .setUrl(session.getOriginalURL())
+         .setSendUserAgent(true)
+         .setProxyservice(Arrays.asList(
+            ProxyCollection.BUY,
+            ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY,
+            ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY))
          .build();
-
-      Response response = this.dataFetcher.post(session, request);
-      int statusCode = response.getLastStatusCode();
-
-      if (statusCode == 0) {
-         try {
-            TimeUnit.SECONDS.sleep(2);
-         } catch (InterruptedException e) {
-            e.printStackTrace();
-         }
-         Request requestNextTry = Request.RequestBuilder.create()
-            .setUrl("https://www.martinsatacado.com.br/j_spring_security_check")
-            .setPayload(payload)
-            .setProxyservice(Arrays.asList(
-               ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY,
-               ProxyCollection.NETNUT_RESIDENTIAL_MX_HAPROXY,
-               ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY
-            ))
-            .setHeaders(headers)
-            .build();
-         response = this.dataFetcher.post(session, requestNextTry);
-      }
+      Response response = CrawlerUtils.retryRequestWithListDataFetcher(request, List.of(new ApacheDataFetcher(), new JsoupDataFetcher(), new FetcherDataFetcher()), session, "get");
       return response;
    }
 
@@ -105,21 +81,30 @@ public class BrasilMartinsCrawler extends Crawler {
    public List<Product> extractInformation(Document doc) throws Exception {
       super.extractInformation(doc);
       List<Product> products = new ArrayList<>();
+      String str = CrawlerUtils.scrapScriptFromHtml(doc,"#__NEXT_DATA__");
+      JSONArray productArr  = JSONUtils.stringToJsonArray(str);
 
-      if (isProductPage(doc)) {
-         Logging.printLogInfo(
-            logger, session, "Product page identified: " + session.getOriginalURL());
+      if (true) {
+         JSONObject data = JSONUtils.getValueRecursive(productArr, "0.props.pageProps.fallback.PRODUCT_DETAIL", JSONObject.class);
+         String internalPid = CommonMethods.getLast(data.optString("productSku").split("_"));
+         String name = data.optString("name");
+         String primaryImage = JSONUtils.getValueRecursive(data, "images.0.value", String.class);;
+         String description = data.getString("description");
+         List<String> secondaryImages = scrapSecondaryImages(data, primaryImage);
+         JSONObject priceObj = fetchPrice(data.optString("productSku"));
+         Offers offers = getStock(priceObj) ? scrapOffers(priceObj) : new Offers();
+         Product product = ProductBuilder.create()
+            .setUrl(session.getOriginalURL())
+            .setInternalPid(internalPid)
+            .setName(name)
+            .setOffers(offers)
+            .setPrimaryImage(primaryImage)
+            .setSecondaryImages(secondaryImages)
+            .setDescription(description)
+            .build();
 
-         List<String> variations = scrapVariations(doc);
+         products.add(product);
 
-         if (!variations.isEmpty()) {
-            for (int i = 0; i < variations.size(); i++) {
-               String variation = i == 0 ? "" : variations.get(i);
-               products.add(extractProductFromHtml(doc, variation));
-            }
-         } else {
-            products.add(extractProductFromHtml(doc, ""));
-         }
 
       } else {
          Logging.printLogDebug(logger, session, "Not a product page " + session.getOriginalURL());
@@ -128,130 +113,179 @@ public class BrasilMartinsCrawler extends Crawler {
       return products;
    }
 
-   private Product extractProductFromHtml(Document doc, String variation) throws OfferException, MalformedPricingException, MalformedProductException {
-      String internalId = CommonMethods.getLast(CrawlerUtils.scrapStringSimpleInfoByAttribute(doc, "input#id", "value").split("_"));
-      String variationInternalId = internalId;
-      String name = CrawlerUtils.scrapStringSimpleInfo(doc, ".qdDetails .title", true);
-      Double variationPrice = null;
-
-      if (!variation.isEmpty()) {
-         String variationName = StringUtils.substringBetween(variation, "(", ")");
-         String variationSlug = CrawlerUtils.toSlug(variationName);
-         variationPrice = convertPrice(variation);
-         if (!"1-unid".equals(variationSlug)) {
-            variationInternalId += "-" + variationSlug;
-            name += " " + variationName;
+   protected Boolean getStock(JSONObject priceObj){
+//      String priceStr = priceObj.optString("preco");
+//      priceStr = priceStr.replaceAll("\\.", "");
+//      Integer priceInt = Integer.parseInt(priceStr);
+      JSONArray prices = priceObj.optJSONArray("precos");
+      if(prices == null){
+         return priceObj.optInt("estoque")>0;
+      }
+      for(Object p : prices){
+         JSONObject price = (JSONObject) p;
+         if(price.optDouble("estoque")>0){
+            return  true;
          }
       }
+      return false;
+   }
 
-      CategoryCollection categories = CrawlerUtils.crawlCategories(doc, ".breadcrumb li:not(:first-child) > a", true);
-      String primaryImage = CrawlerUtils.scrapSimplePrimaryImage(doc, ".imagePrincipal img", Collections.singletonList("src"), "https", "imgprd.martins.com.br");
-      List<String> secondaryImages = CrawlerUtils.scrapSecondaryImages(doc, ".galeryImages img", Collections.singletonList("src"), "https", "imgprd.martins.com.br", primaryImage);
-      String description = CrawlerUtils.scrapSimpleDescription(doc, Arrays.asList(".qdDetails .cods", ".details", "#especfication", ".body #details"));
-      List<String> eans = Collections.singletonList(CrawlerUtils.scrapStringSimpleInfo(doc, ".cods .col-2 p", true));
-      RatingsReviews ratingsReviews = scrapRating(doc, internalId);
-      boolean available = !doc.select(".js-add-to-cart").isEmpty();
-      Offers offers = available ? scrapOffers(doc, variationPrice) : new Offers();
 
-      return ProductBuilder.create()
-         .setUrl(session.getOriginalURL())
-         .setInternalId(variationInternalId)
-         .setInternalPid(internalId)
-         .setName(name)
-         .setCategory1(categories.getCategory(0))
-         .setCategory2(categories.getCategory(1))
-         .setCategory3(categories.getCategory(2))
-         .setPrimaryImage(primaryImage)
-         .setRatingReviews(ratingsReviews)
-         .setSecondaryImages(secondaryImages)
-         .setOffers(offers)
-         .setDescription(description)
-         .setEans(eans)
+   protected void login() {
+
+      Map<String, String> headers = new HashMap<>();
+      headers.put(HttpHeaders.CONTENT_TYPE, "application/json");
+      headers.put("authority", "www.martinsatacado.com.br");
+      headers.put("Authorization", "Basic YmI2ZDhiZTgtMDY3MS0zMmVhLTlhNmUtM2RhNGM2MzUyNWEzOmJmZDYxMTdlLWMwZDMtM2ZjNS1iMzc3LWFjNzgxM2Y5MDY2ZA==");
+      String payload = "{\"grant_type\":\"password\",\"cnpj\":\"" + cnpj + "\",\"username\":\"" + getLogin() + "\",\"codCli\":\"6659973\",\"password\":\"" + getPassword() + "\",\"codedevnd\":\"\",\"profile\":\"ROLE_CLIENT\"}";
+
+      Request request = Request.RequestBuilder.create()
+         .setUrl("https://ssd.martins.com.br/oauth-marketplace-portal/access-tokens")
+         .setPayload(payload)
+         .setProxyservice(Arrays.asList(
+            ProxyCollection.BUY_HAPROXY,
+            ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY,
+            ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY))
+         .setHeaders(headers)
          .build();
+      Response response = CrawlerUtils.retryRequestWithListDataFetcher(request, List.of(new ApacheDataFetcher(), new JsoupDataFetcher(), new FetcherDataFetcher()), session, "post");
+      String str = response.getBody();
+      JSONObject body = JSONUtils.stringToJson(str);
+      accessToken = body.optString("access_token");
    }
 
-   private Double convertPrice(String variation) {
-      Double price = null;
-      String priceString = StringUtils.substringAfter(variation, "R$");
-      try {
-         price = MathUtils.normalizeTwoDecimalPlaces(MathUtils.parseDoubleWithComma(priceString));
-      } catch (Exception e) {
-         e.printStackTrace();
-      }
-      return price;
+   private JSONObject fetchPrice(String id) {
+      login();
+
+      List<String> parts = List.of(id.split("_"));
+      Map<String, String> headers = new HashMap<>();
+      String payloadMartins = parts.get(0).equals("Martins") ? "{\"CodigoMercadoria\": \""+id+"\", \"Quantidade\": 0, \"codGroupMerFrac\": 0, \"codPmc\": null }" : "";
+      String payload3P = !parts.get(0).equals("Martins") ? "{\"seller\":\"" + parts.get(0) + "\",\"CodigoMercadoria\":\"" + id + "\",\"Quantidade\":0}" : "";
+      headers.put(HttpHeaders.CONTENT_TYPE, "application/json");
+      headers.put("Origin", "www.martinsatacado.com.br");
+      headers.put("access_token", accessToken);
+      headers.put("client_id", "bb6d8be8-0671-32ea-9a6e-3da4c63525a3");
+      headers.put("Authorization", "Basic YmI2ZDhiZTgtMDY3MS0zMmVhLTlhNmUtM2RhNGM2MzUyNWEzOmJmZDYxMTdlLWMwZDMtM2ZjNS1iMzc3LWFjNzgxM2Y5MDY2ZA==");
+      String payload = "{\"asm\":0,\"produtos\":["+payloadMartins+"]," +
+         "\"ProdutosExclusaoEan\":[],\"produtosSeller\":["+payload3P+"],\"codeWarehouseDelivery\":0,\"codeWarehouseBilling\":0,\"condicaoPagamento\":111,\"uid\":6659973,\"segment\":0," +
+         "\"tipoLimiteCred\":\"C\",\"precoEspecial\":\"S\",\"ie\":\"127285489112\",\"territorioRca\":0,\"classEstadual\":10,\"tipoSituacaoJuridica\":\"M\",\"codSegNegCliTer\":0," +
+         "\"tipoConsulta\":1,\"commercialActivity\":5,\"groupMartins\":171,\"codCidadeEntrega\":3232,\"codCidade\":3232,\"codRegiaoPreco\":250,\"temVendor\":\"S\",\"codigoCanal\":9," +
+         "\"ufTarget\":\"SP\",\"bu\":1,\"manual\":\"N\",\"email\":\""+getLogin()+"\",\"numberSpinPrice\":\"64\",\"codeDeliveryRegion\":\"322\",\"ufFilialFaturamento\":\"GO\"," +
+         "\"cupons_novos\":[],\"codopdtrcetn\":10,\"origemChamada\":\"PLP\"}";
+
+      Request request = Request.RequestBuilder.create()
+         .setUrl("https://ssd.martins.com.br/b2b-partner/v1/produtosBuyBox")
+         .setPayload(payload)
+         .setProxyservice(Arrays.asList(
+            ProxyCollection.BUY_HAPROXY,
+            ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY,
+            ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY))
+         .setHeaders(headers)
+         .build();
+      Response response = this.dataFetcher.post(session, request);
+      String str = response.getBody();
+      JSONObject body = JSONUtils.stringToJson(str);
+
+      return  parts.get(0).equals("Martins") ? JSONUtils.getValueRecursive(body, "resultado.0", JSONObject.class) : JSONUtils.getValueRecursive(body, "lstPrecoSeller.0", JSONObject.class);
    }
-
-   private List<String> scrapVariations(Document doc) {
-      List<Element> variations = doc.select(".popover .gr-line:not(:first-child) b");
-      return variations.stream().map(Element::text).collect(Collectors.toList());
-   }
-
-   private RatingsReviews scrapRating(Document doc, String internalId) {
-      RatingsReviews ratingsReviews = new RatingsReviews();
-      String ratingString =
-         CrawlerUtils.scrapStringSimpleInfoByAttribute(
-            doc, ".hidden-sm .rating .rating-stars", "data-rating");
-      JSONObject jsonRating = JSONUtils.stringToJson(ratingString);
-
-      double avgRating = jsonRating.opt("rating") != null ? jsonRating.optInt("rating") : 0;
-      int totalReviews = CrawlerUtils.scrapIntegerFromHtml(doc, ".box-review > div:nth-child(3) u", true, 0);
-
-      ratingsReviews.setTotalRating(totalReviews);
-      ratingsReviews.setTotalWrittenReviews(totalReviews);
-      ratingsReviews.setAverageOverallRating(avgRating);
-      ratingsReviews.setDate(session.getDate());
-      ratingsReviews.setInternalId(internalId);
-      return ratingsReviews;
-   }
-
    private boolean isProductPage(Document doc) {
       return !doc.select("input#id").isEmpty();
    }
 
-   private Offers scrapOffers(Document doc, Double variationPrice) throws OfferException, MalformedPricingException {
-      Offers offers = new Offers();
-      Pricing pricing = scrapPricing(doc, variationPrice);
-      //Site hasn't any sale
+   private List<String> scrapSecondaryImages(JSONObject data, String primaryImage) {
+      List<String> list = new ArrayList<>();
+      JSONArray arr = data.optJSONArray("images");
+      for (Object i : arr) {
+         JSONObject image = (JSONObject) i;
+         String imageStr = image.optString("value");
+         if (!imageStr.equals(primaryImage)) {
+            list.add(imageStr);
+         }
+      }
 
-      offers.add(Offer.OfferBuilder.create()
-         .setUseSlugNameAsInternalSellerId(true)
-         .setSellerFullName(SELLER_FULL_NAME)
-         .setMainPagePosition(1)
-         .setIsBuybox(false)
-         .setIsMainRetailer(true)
-         .setPricing(pricing)
-         .build());
-
-      return offers;
-
+      return list;
    }
 
-   private Pricing scrapPricing(Document doc, Double variationPrice) throws MalformedPricingException {
-      Double spotlightPrice;
+   private Offers scrapOffers(JSONObject data) throws OfferException, MalformedPricingException {
+      Offers offers = new Offers();
+      List<String> sales = new ArrayList<>();
+      JSONArray prices = data.optJSONArray("precos");
+      if(prices == null){
 
-      if (variationPrice != null) {
-         spotlightPrice = variationPrice;
-      } else {
-         spotlightPrice = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".qdValue .value", null, true, ',', session);
+
+            Pricing pricing = scrapPricing(data);
+            sales.add(CrawlerUtils.calculateSales(pricing));
+            String sellerName = data.optString("RAZAO_SELLER");
+            offers.add(Offer.OfferBuilder.create()
+               .setMainPagePosition(1)
+               .setIsBuybox(false)
+               .setPricing(pricing)
+               .setSales(sales)
+               .setSellerFullName(sellerName)
+               .setIsMainRetailer(false)
+               .setUseSlugNameAsInternalSellerId(true)
+               .build());
+
+
+      }else{
+         for(Object p : prices){
+            JSONObject price = (JSONObject) p;
+            Pricing pricing = scrapPricing(price);
+            sales.add(CrawlerUtils.calculateSales(pricing));
+            String sellerName = price.optString("fil_delivery");
+            String sellerLocate = price.optString("uf_Delivery");
+            String seller = sellerName + " " + sellerLocate;
+            offers.add(Offer.OfferBuilder.create()
+               .setMainPagePosition(1)
+               .setIsBuybox(false)
+               .setPricing(pricing)
+               .setSales(sales)
+               .setSellerFullName(seller)
+               .setIsMainRetailer(sellerName.equalsIgnoreCase("Martins Hidrolândia"))
+               .setUseSlugNameAsInternalSellerId(true)
+               .build());
+         }
       }
+
+
+
+      return offers;
+   }
+
+   private Pricing scrapPricing(JSONObject data) throws MalformedPricingException {
+      String spotlightPriceStr = data.optString("preco") ;
+      if (spotlightPriceStr.equals("0.0")){
+         spotlightPriceStr = data.optString("precoNormal");
+      }
+      Double spotlightPrice = Double.parseDouble(spotlightPriceStr);
+      String priceFromStr = data.optString("precoCaixaCupom");
+      Double priceFrom = Double.parseDouble(priceFromStr);
+      if (priceFrom.isNaN() ){
+         priceFrom = spotlightPrice;
+      }
+
       CreditCards creditCards = scrapCreditCards(spotlightPrice);
-      //Site hasn't any product with old price
+      BankSlip bankSlip = BankSlip.BankSlipBuilder.create()
+         .setFinalPrice(spotlightPrice)
+         .build();
 
       return Pricing.PricingBuilder.create()
          .setSpotlightPrice(spotlightPrice)
+         .setPriceFrom(priceFrom)
+         .setBankSlip(bankSlip)
          .setCreditCards(creditCards)
          .build();
    }
 
    private CreditCards scrapCreditCards(Double spotlightPrice) throws MalformedPricingException {
       CreditCards creditCards = new CreditCards();
-
       Installments installments = new Installments();
       installments.add(Installment.InstallmentBuilder.create()
          .setInstallmentNumber(1)
          .setInstallmentPrice(spotlightPrice)
          .build());
 
+      Set<String> cards = Sets.newHashSet(Card.VISA.toString(), Card.MASTERCARD.toString(), Card.AURA.toString(), Card.DINERS.toString(), Card.HIPER.toString(), Card.AMEX.toString());
 
       for (String card : cards) {
          creditCards.add(CreditCard.CreditCardBuilder.create()
